--- a/modules/swagger-codegen/src/main/resources/Java/libraries/retrofit2/build.gradle.mustache
+++ b/modules/swagger-codegen/src/main/resources/Java/libraries/retrofit2/build.gradle.mustache
@@ -94,9 +94,8 @@ if(hasProperty('target') && target == 'android') {
 }
 
 ext {
-    oltu_version = "1.0.1"
-    retrofit_version = "2.0.0-beta4"
-    gson_version = "2.6.2"
+    oltu_version = "1.0.0"
+    retrofit_version = "2.0.1"
     swagger_annotations_version = "1.5.8"
     junit_version = "4.12"
 {{#useRxJava}}
