--- a/modules/swagger-codegen/src/main/resources/Java/libraries/retrofit2/pom.mustache
+++ b/modules/swagger-codegen/src/main/resources/Java/libraries/retrofit2/pom.mustache
@@ -123,11 +123,6 @@
       <version>${retrofit-version}</version>
     </dependency>
     <dependency>
-      <groupId>com.squareup.retrofit2</groupId>
-      <artifactId>converter-gson</artifactId>
-      <version>${retrofit-version}</version>
-    </dependency>
-    <dependency>
       <groupId>org.apache.oltu.oauth2</groupId>
       <artifactId>org.apache.oltu.oauth2.client</artifactId>
       <version>${oltu-version}</version>
@@ -153,8 +148,9 @@
   </dependencies>
   <properties>
     <swagger-core-version>1.5.8</swagger-core-version>
-    <retrofit-version>2.0.0-beta4</retrofit-version>{{#useRxJava}}
-    <rxjava-version>1.1.3</rxjava-version>{{/useRxJava}}
+    <retrofit-version>2.0.1</retrofit-version>
+    {{#useRxJava}}<rxjava-version>1.1.3</rxjava-version>{{/useRxJava}}
+    <okhttp-version>3.0.1</okhttp-version>
     <oltu-version>1.0.1</oltu-version>
     <maven-plugin-version>1.0.0</maven-plugin-version>
     <junit-version>4.12</junit-version>
