--- a/modules/swagger-codegen/src/main/resources/swift/api.mustache
+++ b/modules/swagger-codegen/src/main/resources/swift/api.mustache
@@ -83,7 +83,7 @@ public class {{classname}}: APIBase {
  
         let parameters = APIHelper.rejectNil(nillableParameters)
  
-        let convertedParameters = APIHelper.convertBoolToString(parameters!){{/bodyParam}}
+        let convertedParameters = APIHelper.convertBoolToString(parameters){{/bodyParam}}
  
         let requestBuilder: RequestBuilder<{{#returnType}}{{{returnType}}}{{/returnType}}{{^returnType}}Void{{/returnType}}>.Type = {{projectName}}API.requestBuilderFactory.getBuilder()
 
