Closes #7765 #7770: Adds Asciidoc support for Common Mark.

--- a/modules/openapi-generator/src/main/resources/asciidoc-documentation/model.mustache
+++ b/modules/openapi-generator/src/main/resources/asciidoc-documentation/model.mustache
@@ -5,10 +5,22 @@
     {{#model}}
 
 [#{{classname}}]
-=== _{{classname}}_ {{title}}
+=== _{{classname}}_ {{^skipClassTitle}}{{title}}{{/skipClassTitle}}
 
-{{unescapedDescription}}
+{{{unescapedDescription}}}
 
+{{#vendorExtensions.x-is-one-of-interface}}
+[.fields-{{classname}}]
+{{#discriminator}}
+Discriminator Field/Type: {{propertyBaseName}}/{{propertyType}}
+{{/discriminator}}
+
+.One Of The Following Classes:
+{{#oneOf}}
+* <<{{{.}}}>>
+{{/oneOf}}
+{{/vendorExtensions.x-is-one-of-interface}}
+{{^vendorExtensions.x-is-one-of-interface}}
 [.fields-{{classname}}]
 [cols="2,1,2,4,1"]
 |===
@@ -17,12 +29,15 @@
 {{#vars}}
 | {{baseName}}
 | {{#required}}X{{/required}}
-| {{dataType}} {{#isContainer}} of <<{{complexType}}>>{{/isContainer}}
-| {{description}}
+
+| {{dataType}} {{#isContainer}} of <<{{complexType}}>>{{/isContainer}}{{^isContainer}}<<{{dataType}}>>{{/isContainer}}
+a| {{{unescapedDescription}}}
+
 | {{{dataFormat}}} {{#isEnum}}_Enum:_ {{#_enum}}{{this}}, {{/_enum}}{{/isEnum}}
 
 {{/vars}}
 |===
+{{/vendorExtensions.x-is-one-of-interface}}
 
     {{/model}}
 {{/models}}
