--- a/modules/openapi-generator/src/main/resources/swift-alt/api.mustache
+++ b/modules/openapi-generator/src/main/resources/swift-alt/api.mustache
@@ -30,6 +30,22 @@ open class {{classname}} {
     }
 {{#operation}}
 
+    {{#allParams}}
+    {{#isEnum}}
+    /**
+     * enum for parameter {{paramName}}
+     */
+    public enum {{enumName}}_{{operationId}}: {{dataType}}, Hashable, Codable, CaseIterable {
+        {{#allowableValues}}
+        {{#enumVars}}
+        case {{name}} = {{{value}}}
+        {{/enumVars}}
+        {{/allowableValues}}
+    }
+
+    {{/isEnum}}
+    {{/allParams}}
+
     /**
     {{#summary}}
         {{{.}}}
@@ -67,13 +83,14 @@ open class {{classname}} {
             .replacingOccurrences(of: "{{=<% %>=}}{<%baseName%>}<%={{ }}=%>", with: "\({{paramName}})")
         {{/pathParams}}
         let url = baseURL.appendingPathComponent(path)
-        {{#hasQueryParams}}var{{/hasQueryParams}}{{^hasQueryParams}}let{{/hasQueryParams}} components = URLComponents(url: url, resolvingAgainstBaseURL: false)
-        {{#hasQueryParams}}components?.queryItems = [
-            {{#queryParams}}
-            {{! TODO: Convert value to string if needed (can be nil, can be container) }}
-            URLQueryItem(name: "{{paramName}}", value: {{#isArray}}{{paramName}}{{^required}}?{{/required}}.joined(separator: ", "){{/isArray}}{{^isArray}}{{paramName}}{{/isArray}}){{^-last}}, {{/-last}}
-            {{/queryParams}}
-        ]{{/hasQueryParams}}
+        {{#hasQueryParams}}
+        // Adding query items
+        var{{/hasQueryParams}}{{^hasQueryParams}}let{{/hasQueryParams}} components = URLComponents(url: url, resolvingAgainstBaseURL: false)
+        {{#hasQueryParams}}var queryItems: [URLQueryItem] = []
+        {{#queryParams}}
+        {{#required}}queryItems.append(URLQueryItem(name: "{{paramName}}", value: {{> toString}})){{/required}}{{^required}}if let {{paramName}} = {{paramName}} { queryItems.append(URLQueryItem(name: "{{paramName}}", value: {{> toString}})) } {{/required}}
+        {{/queryParams}}
+        components?.queryItems = queryItems{{/hasQueryParams}}
         guard let requestURL = components?.url else {
             return Fail(error: OpenAPITransportError.badURLError())
                 .eraseToAnyPublisher()
@@ -81,19 +98,23 @@ open class {{classname}} {
 
         var request = URLRequest(url: requestURL)
         request.httpMethod = "{{httpMethod}}"
-        {{#hasHeaderParams}}// Setting headers
+        // Setting headers
         request.allHTTPHeaderFields = [{{^headerParams}}{{^hasFormParams}}
             :{{/hasFormParams}}{{/headerParams}}{{#hasFormParams}}
             "Content-Type": {{^consumes}}"multipart/form-data"{{/consumes}}{{#consumes.0}}"{{{mediaType}}}"{{/consumes.0}},{{/hasFormParams}}{{#headerParams}}
             {{! TODO: Convert value to string if needed (can be nil, can be container) }}
             "{{baseName}}": {{paramName}}{{^-last}}, {{/-last}}{{/headerParams}}
-        ].compactMapValues { $0 }{{/hasHeaderParams}}
-        {{#hasBodyParam}}{{#bodyParam}}// Setting body parameters {{! TODO: Convert value to data if needed (can be nil, can be Data already) }}
+        ].compactMapValues { $0 }
+        {{#hasBodyParam}}{{#bodyParam}}// Setting JSON body
         request.httpBody = try? {{classname}}.encoder.encode({{paramName}})
-        if request.value(forHTTPHeaderField: "Content-Type") == nil {
-            request.setValue("application/json", forHTTPHeaderField: "Content-Type")
-        }
         {{/bodyParam}}{{/hasBodyParam}}
+        {{#hasFormParams}} // Setting form encoded body
+        var formEncodedItems: [String] = []
+        {{#formParams}}
+        {{#required}}formEncodedItems.append("{{paramName}}=\({{> toString}})"){{/required}}{{^required}}if let {{paramName}} = {{paramName}} { formEncodedItems.append("{{paramName}}=\({{> toString}})") } {{/required}}
+        {{/formParams}}
+        request.httpBody = formEncodedItems.joined(separator: "&").data(using: .utf8)
+        {{/hasFormParams}}
         // Getting auth type {{! TODO: Set proper auth type) }}
         let securitySchemes: [SecurityScheme] = [{{#authMethods}}{{#isBasicBearer}}.bearer{{/isBasicBearer}}{{/authMethods}}]
         return transport.send(request: request, securitySchemes: securitySchemes)
