--- a/modules/openapi-generator/src/main/resources/swift-alt/model.mustache
+++ b/modules/openapi-generator/src/main/resources/swift-alt/model.mustache
@@ -11,5 +11,6 @@ import Foundation
 {{#vendorExtensions.x-is-one-of-interface}}
 {{> modelOneOf}}{{/vendorExtensions.x-is-one-of-interface}}{{^vendorExtensions.x-is-one-of-interface}}{{#isArray}}
 {{> modelArray}}{{/isArray}}{{^isArray}}{{#isEnum}}
-{{> modelEnum}}{{/isEnum}}{{^isEnum}}
-{{> modelObject}}{{/isEnum}}{{/isArray}}{{/vendorExtensions.x-is-one-of-interface}}{{/model}}{{/models}}
+{{> modelEnum}}{{/isEnum}}{{^isEnum}}{{#vendorExtensions.x-swift-contains-not-codable}}
+{{> modelObjectCustom}}{{/vendorExtensions.x-swift-contains-not-codable}}{{^vendorExtensions.x-swift-contains-not-codable}}
+{{> modelObject}}{{/vendorExtensions.x-swift-contains-not-codable}}{{/isEnum}}{{/isArray}}{{/vendorExtensions.x-is-one-of-interface}}{{/model}}{{/models}}
