--- a/modules/openapi-generator/src/main/resources/swift-alt/modelEnum.mustache
+++ b/modules/openapi-generator/src/main/resources/swift-alt/modelEnum.mustache
@@ -1,4 +1,4 @@
-public enum {{classname}}: {{dataType}}, Hashable, Codable, CaseIterable {
+public enum {{classname}}: {{dataType}}, Codable, CaseIterable {
 {{#allowableValues}}
 {{#enumVars}}
     case {{{name}}} = {{{value}}}
