--- a/modules/openapi-generator/src/main/resources/swift-alt/modelObject.mustache
+++ b/modules/openapi-generator/src/main/resources/swift-alt/modelObject.mustache
@@ -1,4 +1,4 @@
-public struct {{{classname}}}: Codable, Hashable {
+public struct {{{classname}}}: Codable {
 {{#allVars}}
 {{#isEnum}}
 {{> modelInlineEnumDeclaration}}
