--- a/modules/openapi-generator/src/main/resources/swift-alt/modelOneOf.mustache
+++ b/modules/openapi-generator/src/main/resources/swift-alt/modelOneOf.mustache
@@ -1,4 +1,4 @@
-public enum {{classname}}: Codable, Hashable {
+public enum {{classname}}: Codable {
     {{#oneOf}}
     case type{{.}}({{.}})
     {{/oneOf}}
