--- a/modules/openapi-generator/src/main/resources/swift-alt/modelInlineEnumDeclaration.mustache
+++ b/modules/openapi-generator/src/main/resources/swift-alt/modelInlineEnumDeclaration.mustache
@@ -1,4 +1,4 @@
-    public enum {{enumName}}: {{^isContainer}}{{dataType}}{{/isContainer}}{{#isContainer}}String{{/isContainer}}, Hashable, Codable, CaseIterable {
+    public enum {{enumName}}: {{^isContainer}}{{dataType}}{{/isContainer}}{{#isContainer}}String{{/isContainer}}, Codable, CaseIterable {
         {{#allowableValues}}
         {{#enumVars}}
         case {{{name}}} = {{{value}}}
