--- a/modules/openapi-generator/src/main/resources/swift-alt/OpenAPITransportPackage.mustache
+++ b/modules/openapi-generator/src/main/resources/swift-alt/OpenAPITransportPackage.mustache
@@ -11,6 +11,7 @@ let package = Package(
     products: [
         .library(
             name: "OpenAPITransport",
+            type: .static,
             targets: ["OpenAPITransport"]
         ),
     ],
