--- a/modules/openapi-generator/src/main/resources/swift-alt/Package.mustache
+++ b/modules/openapi-generator/src/main/resources/swift-alt/Package.mustache
@@ -11,6 +11,7 @@ let package = Package(
     products: [
         .library(
             name: "{{projectName}}",
+            type: .static,
             targets: ["{{projectName}}"]
         ),
     ],
